# xiaoyingOS.github.io

./: Best_Server.html  CNAME  READEME.md  aios.html  index.html  qrcode.html  readme.txt  scan_code.html  video_player.html  voice.html  weqte.html
00_Best_Server_Beta/: 00_README.txt  00_一键启动脚本.sh  00_一键构建项目.sh  CMakeLists.txt  cert.pem  cert_part2.pem  test_upload_fix.cpp  完整构建说明.txt  注意这里的项目文件夹打包没有断点续传.txt
00_Best_Server_Beta/benchmarks/: CMakeLists.txt  benchmark.cpp  minimal_test.cpp  performance_benchmarks.cpp  simple_performance_test.cpp
00_Best_Server_Beta/cross_platform_monitor/: CMakeLists_win_build.txt  system_monitor_test.cpp
00_Best_Server_Beta/docs/: COMPLETE_OPTIMIZATION_REPORT.md  CURRENT_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  README.md  test_disk_io.txt  test_file.txt
00_Best_Server_Beta/examples/: CMakeLists.txt  Makefile  cmake_install.cmake  rpc_example.cpp  simple_test  simple_test.cpp
00_Best_Server_Beta/include/best_server/: best_server.hpp
00_Best_Server_Beta/include/best_server/config/: config_manager.hpp
00_Best_Server_Beta/include/best_server/core/: adaptive_scheduler.hpp  batch_optimizer.hpp  cache_optimization.hpp  lockfree_queue.hpp  numa_affinity.hpp  per_cpu.hpp  rcu.hpp  reactor.hpp  scheduler.hpp  task_queue.hpp  thread_pool.hpp
00_Best_Server_Beta/include/best_server/coroutine/: coroutine.hpp
00_Best_Server_Beta/include/best_server/future/: continuation.hpp  coroutine_pool.hpp  future.hpp  future.hpp.backup
00_Best_Server_Beta/include/best_server/health/: health_checker.hpp
00_Best_Server_Beta/include/best_server/io/: batch_io.hpp  dma_file.hpp  file_descriptor_pool.hpp  file_reader.hpp  file_writer.hpp  folder_transfer.hpp  io_event_loop.hpp  io_uring.hpp  optimized_socket.hpp  tcp_socket.hpp  udp_socket.hpp
00_Best_Server_Beta/include/best_server/load_balancer/: load_balancer.hpp
00_Best_Server_Beta/include/best_server/logger/: logger.hpp
00_Best_Server_Beta/include/best_server/memory/: allocator.hpp  intrusive_ptr.hpp  numa_allocator.hpp  object_pool.hpp  optimized_pool.hpp  slab_allocator.hpp  zero_copy_buffer.hpp
00_Best_Server_Beta/include/best_server/monitoring/: monitoring.hpp  system_monitor.hpp
00_Best_Server_Beta/include/best_server/network/: dpdk_socket.hpp  http2_server.hpp  http_parser.hpp  http_request.hpp  http_response.hpp  http_server.hpp  simd_utils.hpp
00_Best_Server_Beta/include/best_server/rpc/: rpc_client.hpp  rpc_protocol.hpp  rpc_server.hpp
00_Best_Server_Beta/include/best_server/service_discovery/: service_discovery.hpp
00_Best_Server_Beta/include/best_server/timer/: timer_manager.hpp  timer_wheel.hpp
00_Best_Server_Beta/include/best_server/utils/: performance_monitor.hpp  random.hpp
00_Best_Server_Beta/src/config/: config_manager.cpp
00_Best_Server_Beta/src/core/: adaptive_scheduler.cpp  batch_optimizer.cpp  numa_affinity.cpp  per_cpu.cpp  rcu.cpp  reactor.cpp  scheduler.cpp  task_queue.cpp  thread_pool.cpp
00_Best_Server_Beta/src/coroutine/: coroutine.cpp
00_Best_Server_Beta/src/database/mysql/: mysql_client.cpp
00_Best_Server_Beta/src/future/: coroutine_pool.cpp  future.cpp
00_Best_Server_Beta/src/health/: health_checker.cpp
00_Best_Server_Beta/src/io/: batch_io.cpp  dma_file.cpp  file_descriptor_pool.cpp  file_reader.cpp  file_writer.cpp  folder_transfer.cpp  io_event_loop.cpp  io_uring.cpp  tcp_socket.cpp  udp_socket.cpp
00_Best_Server_Beta/src/load_balancer/: load_balancer_fixed.cpp
00_Best_Server_Beta/src/logger/: logger.cpp
00_Best_Server_Beta/src/memory/: allocator.cpp  numa_allocator.cpp  object_pool.cpp  slab_allocator.cpp  zero_copy_buffer.cpp
00_Best_Server_Beta/src/monitoring/: monitoring.cpp  system_monitor.cpp
00_Best_Server_Beta/src/network/: dpdk_socket.cpp  http2_server.cpp  http_parser.cpp  http_request.cpp  http_response.cpp  http_server.cpp
00_Best_Server_Beta/src/rpc/: rpc_client.cpp  rpc_protocol.cpp  rpc_server.cpp
00_Best_Server_Beta/src/service_discovery/: service_discovery.cpp
00_Best_Server_Beta/src/timer/: timer_manager.cpp  timer_wheel.cpp
00_Best_Server_Beta/src/utils/: performance_monitor.cpp  random.cpp
00_Best_Server_Beta/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests.cpp
00_Best_Server_Beta/web/: 00_README.txt  CMakeLists.txt  HTTPS_README.md  HTTPS_USAGE.md  README.md  STATUS.md  cert.pem  cert_new.pem  cert_part1.pem  https_proxy.cpp  https_proxy.cpp.bak1  key.pem  server.cpp  server.cpp.bak  server_daemon.cpp  server_stats.hpp  start_https.sh  start_servers.sh
00_Best_Server_Beta/web/benchmarks/: quick_performance_test.cpp
00_Best_Server_Beta/web/cross_platform_monitor/: CMakeLists.txt  CMakeLists_Windows.txt  build_win.bat
00_Best_Server_Beta/web/docs/: FINAL_OPTIMIZATION_REPORT.md  FINAL_REPORT.md  INTERFACE_COMPLETE.md  INTERFACE_UPDATE.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PHASE1_STATUS.md  ULTIMATE_OPTIMIZATION_REPORT.md  cpu_test  cpu_test.cpp  debug_server.cpp  fast_test.txt  final_test.sh  frontend_test.txt  perf_test.txt  quick_test.sh  server.cpp.backup  server_backup.cpp  server_metrics_function.cpp  simple_http.cpp  simple_upload_server  simple_upload_server.cpp  simple_upload_server_cpu  simple_upload_server_final  simple_upload_server_fixed  simple_upload_server_fixed2  simple_upload_server_fixed_load  simple_upload_server_full  simple_upload_server_full_utf8  simple_upload_server_gpu  simple_upload_server_metrics  simple_upload_server_stable  simple_upload_server_temp  simple_upload_server_updated  simple_upload_server_utf8  simple_upload_server_v2  simple_upload_server_v3  simple_upload_server_with_server_metrics  start_server.sh  (+34 more)
00_Best_Server_Beta/web/examples/: Makefile  async_example.cpp  cmake_install.cmake  complete_example.cpp  simple_http_server.cpp  simple_test
00_Best_Server_Beta/web/static/: index.html
00_Best_Server_Beta/web/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests  unit_tests_simple.cpp
00_WeQTe/: cert.pem  (+29 more)
(+31 files in other folders)
